# song-picker

./: .editorconfig  app.py  pyproject.toml  ruff.toml
src/: app.py  picker_component.py  scraping.py
src/picker_component/: index.html  script.js  style.css
